#############################################################
##                                                         ##
## Copyright (c) 2003-2017 by The University of Queensland ##
## Centre for Geoscience Computing                         ##
## http://earth.uq.edu.au/centre-geoscience-computing      ##
##                                                         ##
## Primary Business: Brisbane, Queensland, Australia       ##
## Licensed under the Open Software License version 3.0    ##
## http://www.apache.org/licenses/LICENSE-2.0              ##
##                                                         ##
#############################################################

##
include $(top_srcdir)/Config/Cpp.am

lib_LTLIBRARIES=libpis.la

#noinst_LIBRARIES =  libpis.a

libpis_la_SOURCES = \
    pi_storage_eb.h 	pi_storage_eb.hpp 	pi_storage_ed.h \
    pi_storage_ed.hpp 	pi_storage_e.h 	pi_storage_e.hpp 	\
    pi_storage.h 	pi_storage.hpp 	pi_storage_ne.h         \
    pi_storage_f.h 	pi_storage_f.hpp    \
    pi_storage_ne.hpp 	pi_storage.cpp 	trimesh_pis.h     \
    trimesh_pis.hpp trimesh_pis_ne.h trimesh_pis_ne.hpp   \
    mesh2d_pis_eb.h mesh2d_pis_eb.hpp mesh2d_pis.h        \
    pi_storage_single.h trimesh_pis_eb.h mesh2d_pis.hpp   \
    pi_storage_single.hpp trimesh_pis_eb.hpp \
    mesh2d_pis_ne.h  mesh2d_pis_ne.hpp
